loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:22: error: 'while' expected but '}' found.
   }
   ^